# Heliogrim-Engine

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .resharper-format.xml  CMakeLists.txt  Game.sln  Game.sln.DotSettings  Game.sln.rn.xml  Options.cmake  README.md  common.natstepfilter  common.natvis  qodana.yaml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  bug_report.md  feature_request.md
.gitlab/: ci-qodana.yml
.gitlab/issue_templates/: bug-report.md  feature.md
Game/: Game.aps  Game.vcxproj
cmake/: Architecture.cmake  BuildType.cmake  ClangTidy.cmake  CompileOptions.cmake  ConfigDart.cmake  CppCheck.cmake  Dependencies.cmake  DeployDynLibs.cmake  Discover.cmake  GlobalSettings.cmake  HealthCheck.cmake  LinkTimeOpt.cmake  MakeExecutableProject.cmake  MakeLibraryProject.cmake  MakeTestProject.cmake  Managed.cmake  Options.cmake  PreprocDefinitions.cmake  Sanitizers.cmake  Tools.cmake
docs/: concept.md  ideas.md
projects/: Build.Debug.props  Build.Profiling.props  Build.Release.props  Build.__Any__.props  Engine.Common.props  Engine.__Any__.props  GTest.__Any__.props
projects/Editor.Action/: CMakeLists.txt  Editor.Action.vcxproj  Editor.Action.vcxproj.filters
projects/Editor.Assets.Default/: CMakeLists.txt
projects/Editor.Core/: CMakeLists.txt  Editor.Core.vcxproj  Editor.Core.vcxproj.filters
projects/Editor.GFX/: CMakeLists.txt  Editor.GFX.vcxproj  Editor.GFX.vcxproj.filters
projects/Editor.GFX.Event/: CMakeLists.txt  Editor.GFX.Event.vcxproj  Editor.GFX.Event.vcxproj.filters
projects/Editor.GFX.Graphs/: CMakeLists.txt  Editor.GFX.Graphs.vcxproj  Editor.GFX.Graphs.vcxproj.filters
projects/Editor.GFX.IO/: CMakeLists.txt  Editor.GFX.IO.vcxproj  Editor.GFX.IO.vcxproj.filters
projects/Editor.GFX.Loader/: CMakeLists.txt  Editor.GFX.Loader.vcxproj  Editor.GFX.Loader.vcxproj.filters
projects/Editor.Main/: CMakeLists.txt  Editor.Main.vcxproj  Editor.Main.vcxproj.filters
projects/Editor.Project.Generate/: CMakeLists.txt
projects/Editor.Render/: CMakeLists.txt  Editor.Render.vcxproj  Editor.Render.vcxproj.filters
projects/Editor.Scene/: CMakeLists.txt  Editor.Scene.vcxproj  Editor.Scene.vcxproj.filters
projects/Editor.UI/: CMakeLists.txt  Editor.UI.vcxproj  Editor.UI.vcxproj.filters
projects/Editor.UI.Init/: CMakeLists.txt
projects/Ember/: CMakeLists.txt  Ember.vcxproj  Ember.vcxproj.filters
projects/Ember.Default/: CMakeLists.txt  Ember.Default.vcxproj  Ember.Default.vcxproj.filters
projects/Ember.Main/: CMakeLists.txt  Ember.Main.vcxproj  Ember.Main.vcxproj.filters
projects/Ember.Test/: CMakeLists.txt  Ember.Test.vcxproj
projects/Engine.ACS/: CMakeLists.txt  Engine.ACS.vcxproj  Engine.ACS.vcxproj.filters
projects/Engine.ACS.Test/: CMakeLists.txt  Engine.ACS.Test.vcxproj
projects/Engine.Accel/: CMakeLists.txt  Engine.Accel.vcxproj  Engine.Accel.vcxproj.filters
projects/Engine.Accel.Command/: CMakeLists.txt  Engine.Accel.Command.vcxproj  Engine.Accel.Command.vcxproj.filters
projects/Engine.Accel.Compile/: CMakeLists.txt  Engine.Accel.Compile.vcxproj  Engine.Accel.Compile.vcxproj.filters
projects/Engine.Accel.Effect/: CMakeLists.txt  Engine.Accel.Effect.vcxproj  Engine.Accel.Effect.vcxproj.filters
projects/Engine.Accel.Lang/: CMakeLists.txt  Engine.Accel.Lang.vcxproj  Engine.Accel.Lang.vcxproj.filters
projects/Engine.Accel.Loader/: CMakeLists.txt  Engine.Accel.Loader.vcxproj  Engine.Accel.Loader.vcxproj.filters
projects/Engine.Accel.Pass/: CMakeLists.txt  Engine.Accel.Pass.vcxproj  Engine.Accel.Pass.vcxproj.filters
projects/Engine.Accel.Pipeline/: CMakeLists.txt  Engine.Accel.Pipeline.vcxproj  Engine.Accel.Pipeline.vcxproj.filters
projects/Engine.Accel.Storage/: CMakeLists.txt  Engine.Accel.Storage.vcxproj  Engine.Accel.Storage.vcxproj.filters
projects/Engine.Asserts/: CMakeLists.txt  Engine.Asserts.vcxproj  Engine.Asserts.vcxproj.filters
projects/Engine.Assets/: CMakeLists.txt  Engine.Assets.vcxproj  Engine.Assets.vcxproj.filters
projects/Engine.Assets.System/: CMakeLists.txt  Engine.Assets.System.vcxproj  Engine.Assets.System.vcxproj.filters
projects/Engine.Assets.Test/: CMakeLists.txt  Engine.Assets.Test.vcxproj
projects/Engine.Common/: CMakeLists.txt  Engine.Common.vcxproj  Engine.Common.vcxproj.filters
projects/Engine.Common.Test/: CMakeLists.txt  Engine.Common.Test.vcxproj
projects/Engine.Config/: CMakeLists.txt
projects/Engine.Core/: CMakeLists.txt  Engine.Core.vcxproj  Engine.Core.vcxproj.filters
projects/Engine.Core.Game/: CMakeLists.txt  Engine.Core.Game.vcxproj  Engine.Core.Game.vcxproj.filters
projects/Engine.Core.Schedule/: CMakeLists.txt  Engine.Core.Schedule.vcxproj  Engine.Core.Schedule.vcxproj.filters
projects/Engine.Driver.Vulkan/: CMakeLists.txt  Engine.Driver.Vulkan.vcxproj  Engine.Driver.Vulkan.vcxproj.filters
projects/Engine.ECS/: CMakeLists.txt  Engine.ECS.vcxproj  Engine.ECS.vcxproj.filters
projects/Engine.ECS.Subsystem/: CMakeLists.txt  Engine.ECS.Subsystem.vcxproj  Engine.ECS.Subsystem.vcxproj.filters
projects/Engine.ECS.Subsystem.Test/: CMakeLists.txt  Engine.ECS.Subsystem.Test.vcxproj
projects/Engine.ECS.Test/: CMakeLists.txt  Engine.ECS.Test.vcxproj
projects/Engine.Env/: CMakeLists.txt  Engine.Env.vcxproj  Engine.Env.vcxproj.filters
projects/Engine.Event/: CMakeLists.txt  Engine.Event.vcxproj  Engine.Event.vcxproj.filters
projects/Engine.Event.Test/: CMakeLists.txt  Engine.Event.Test.vcxproj
projects/Engine.Filesystem/: CMakeLists.txt  Engine.Filesystem.vcxproj  Engine.Filesystem.vcxproj.filters
projects/Engine.GFX.Acc/: CMakeLists.txt  Engine.GFX.Acc.vcxproj  Engine.GFX.Acc.vcxproj.filters
projects/Engine.GFX.Acc.Compile/: CMakeLists.txt  Engine.GFX.Acc.Compile.vcxproj  Engine.GFX.Acc.Compile.vcxproj.filters
projects/Engine.GFX.Acc.Lang/: CMakeLists.txt  Engine.GFX.Acc.Lang.vcxproj  Engine.GFX.Acc.Lang.vcxproj.filters
projects/Engine.GFX.Event/: CMakeLists.txt  Engine.GFX.Event.vcxproj  (+1 more)
projects/Game.Main/: CMakeLists.txt  Game.Main.vcxproj  Game.Main.vcxproj.filters  light.spotlight.glsl
(+5237 files in other folders)
